# intel-simics-dmlc-projects

./: README.md
my-intel-simics-project-1/: .modcache  .package-list  CMakeLists.txt  GNUmakefile  README.md  cmake-wrapper.mk  compiler.mk  config-user.mk  config.mk  requirements.txt  simics.bat
my-intel-simics-project-1/.project-properties/: package-list-md5  project-info.json  project-md5  project-paths  project-version
my-intel-simics-project-1/modules/basic_uart/: CMakeLists.txt  Makefile  README_basic_uart.md  basic_uart.dml  module_load.py
my-intel-simics-project-1/modules/basic_uart/test/: CMakeLists.txt  basic_uart_common.py  s-basic_uart.py  s-info-status.py
my-intel-simics-project-1/modules/mydevice/: CMakeLists.txt  Makefile  mydevice copy.dml  mydevice.dml
my-intel-simics-project-1/modules/mydevice/test/: CMakeLists.txt  mydevice_common.py  s-info-status.py  s-mydevice.py
my-intel-simics-project-1/modules/uart_core/: CMakeLists.txt  Makefile  README_uart_core.md  module_load.py  uart_core.dml
my-intel-simics-project-1/modules/uart_core/test/: CMakeLists.txt  s-info-status.py  s-uart_core.py  uart_core_common.py
my-intel-simics-project-1/targets/cosim/: queues-in-cosimulator.simics
my-intel-simics-project-1/targets/qsp-x86/: firststeps-multi.simics  firststeps-no-network.simics  firststeps.simics  qsp-atom-core.simics  qsp-clear-linux-pcie-demo.simics  qsp-clear-linux.simics  qsp-client-core.simics  qsp-dvd-boot.simics  qsp-hdd-boot.simics  qsp-modern-core.simics  qsp-sample-core-timing.simics  qsp-server-core.simics  qsp-usb-boot.simics
my-intel-simics-project-1/targets/simics-user-training/: 003-qsp-training-old-style.simics  900-copy-debug-files-to-project.simics
my-intel-simics-project-1/targets/vacuum/: basic_uart.simics  mydevice.simics  uart_core.simics  vacuum.simics
my-intel-simics-project-1/win64/doc-index/: .input.json  front.html  index.html  master-toc.js  search.js
my-intel-simics-project-1/win64/doc-index/DOCUMENTATION/: index.html  index.single-page.html  toc.json
my-intel-simics-project-1/win64/doc-index/analyzer-user-guide/: analyzer-introduction.html  caches-introduction.html  caches.html  code-coverage-commands.html  code-coverage-introduction.html  code-coverage-limitations.html  code-coverage-workflow.html  code-coverage.html  cpumode-tracker.html  debugger-api.html  debugging-target-code.html  event-system.html  explanation-of-source-coverage.html  feature-list-stall-cache.html  index.html  index.single-page.html  linux-tracker.html  multiple-oss.html  node-tree-patterns.html  nodes.html  os-awareness-configuration.html  os-awareness-domains.html  os-awareness-limitations.html  os-awareness-scripts.html  osa-commands.html  partition-tracker.html  programmatically-constructing-a-cache-hierarchy.html  raw-code-coverage-format.html  requirements.html  simulating-a-simple-cache.html  software-tracker-scripting.html  talos-debugging-cli.html  talos-debugging-limitations.html  talos-debugging-queries.html  target-software-tracking.html  toc.json  tracker-activation.html  tracker-parameters.html  uefi-fw-trk-uefi-notification-update.html  uefi-fw-trk.html  (+4 more)
my-intel-simics-project-1/win64/doc-index/blueprints/: blueprints.html  index.single-page.html  toc.json
my-intel-simics-project-1/win64/doc-index/byte-order-and-byte-swapping/: index.html  index.single-page.html  toc.json
my-intel-simics-project-1/win64/doc-index/cc-device-api/: index.html  index.single-page.html  toc.json
my-intel-simics-project-1/win64/doc-index/cmake/: README.html  index.single-page.html  toc.json
my-intel-simics-project-1/win64/doc-index/coroutines-in-simics/: advanced-usage.html  basic-usage.html  bp-manager.html  index.html  index.single-page.html  introduction.html  script-branch.html  sloop-refman.html  snoop-refman.html  toc.json
my-intel-simics-project-1/win64/doc-index/craff/: index.html  index.single-page.html  toc.json
my-intel-simics-project-1/win64/doc-index/creating-packages/: index.html  index.single-page.html  toc.json
my-intel-simics-project-1/win64/doc-index/debugging-simics/: index.html  index.single-page.html  toc.json
my-intel-simics-project-1/win64/doc-index/dml-1.2-reference-manual/: grammar.html  index.html  introduction.html  language.html  limitations.html  messages.html  toc.json  (+3 more)
my-intel-simics-project-1/win64/lib/: mydevice.xml  simple_device.xml
(+11312 files in other folders)
